[gd_scene load_steps=9 format=3 uid="uid://nlnbjg7spmbn"]

[ext_resource type="Script" path="res://Scenes/Cutscene.gd" id="1_5qqcn"]
[ext_resource type="Texture2D" uid="uid://dh3xeih2fw3kh" path="res://Assets/Sprites/laugh.png" id="1_svmst"]
[ext_resource type="Texture2D" uid="uid://qf2q4ck5iml6" path="res://Assets/Sprites/laghing.png" id="2_02kah"]
[ext_resource type="Texture2D" uid="uid://c3bhqbwpb7hgm" path="res://Assets/Sprites/notlaughing.png" id="2_qx5ao"]
[ext_resource type="PackedScene" uid="uid://dl4h7i6ao01ds" path="res://Entities/Laugh.tscn" id="4_r0aa6"]
[ext_resource type="PackedScene" uid="uid://crn8b70ebw4fu" path="res://Entities/Customer.tscn" id="5_6y7i4"]
[ext_resource type="Texture2D" uid="uid://b5dxfb2wlbxbh" path="res://Assets/Sprites/button.png" id="7_ff50j"]
[ext_resource type="FontFile" uid="uid://cq7w7fouxsfsi" path="res://Assets/Fonts/Espresso Show.otf" id="8_vnlp5"]

[node name="Cutscene" type="Node2D"]
script = ExtResource("1_5qqcn")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1153.0
offset_bottom = 648.0
color = Color(0.364706, 0.564706, 1, 1)

[node name="LaughAlone" type="Node2D" parent="."]
visible = false

[node name="Normal" type="Sprite2D" parent="LaughAlone"]
position = Vector2(573, 496)
scale = Vector2(2.0641, 2.0641)
texture = ExtResource("1_svmst")

[node name="Laugh" type="Sprite2D" parent="LaughAlone"]
visible = false
position = Vector2(573, 496)
scale = Vector2(2.0641, 2.0641)
texture = ExtResource("2_02kah")

[node name="Sad" type="Sprite2D" parent="LaughAlone"]
visible = false
position = Vector2(573, 496)
scale = Vector2(2.0641, 2.0641)
texture = ExtResource("2_qx5ao")

[node name="LaughNextLevel" type="Node2D" parent="."]
visible = false

[node name="Laugh" parent="LaughNextLevel" instance=ExtResource("4_r0aa6")]
position = Vector2(986, 324)

[node name="Customer" parent="LaughNextLevel" instance=ExtResource("5_6y7i4")]
position = Vector2(240, 402)
is_cutscene = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="SkipButton" type="TextureButton" parent="."]
offset_left = 948.0
offset_top = 569.0
offset_right = 1323.0
offset_bottom = 713.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("7_ff50j")

[node name="Label" type="Label" parent="SkipButton"]
layout_mode = 0
offset_left = 102.0
offset_top = 24.0
offset_right = 258.0
offset_bottom = 122.0
theme_override_fonts/font = ExtResource("8_vnlp5")
theme_override_font_sizes/font_size = 80
text = "skip"

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_audio_stream_player_finished"]
[connection signal="pressed" from="SkipButton" to="." method="_on_texture_button_pressed"]
